# Hull_control_system_all

./: .gitignore  Hull_control_ststem_v1.0.rar  Untitled  readme.md
Hull_control_ststem/: .gitignore  compass_calibration.py  heading_car.py  heading_lock_control.py  heading_wrap.py  lan_control_config.yaml  lan_control_hull.py  lan_control_server.py  motor_config.yaml  orange_pi_motor_driver.py  two_heading_sequence.py
Hull_control_ststem/Gps/: gps.py  gps_navigation.py  gps_navigation_README.md  gps_navigation_controller.py  gps_roundtrip_mission.py
Hull_control_ststem/Three_axis_angles/: README.md  angle_filter.py  compass_kalman.py  ddm350b.py  example_ddm350b.py  mode_command.py  sensor_ui.py  triple_axis_reader.py
Hull_control_ststem/compass/: __init__.py  config.py  device.py  filter.py  heading.py  protocol.py  transport.py  wrap.py
Hull_control_ststem/control_car/: demo.py  dual_motor_control.py  esc_dual_drive.py  esc_motor_control.py  esc_pwmchip_control.py  gpio50_pwm.py  gpio54_high.py  gpio54_pwm.py  keyboard_remote_esc_stdin.py  keyboard_remote_stdin.py  keyboard_remote_uart_stdin.py  motor_test.py  pwm_sysfs.py  serial_d.py  serial_m.py  serial_s.py  test_dual_motor.py  test_esc_motor.py  uart_dual_drive.py  uart_motor_protocol.py
ros2_hull/: 122.mvc  123.mvc  546.mvc
ros2_hull/install/: local_setup.sh  setup.sh
ros2_hull/install/gps_wgs84_to_gcj02/share/gps_wgs84_to_gcj02/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros2_hull/log/: latest_build
ros2_hull/src/: wheeltec_udev.sh
ros2_hull/tar/: 123.md
(+60 files in other folders)
