<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gps_wgs84_to_gcj02</name>
  <version>0.1.0</version>
  <description>Subscribe NavSatFix (WGS84), publish NavSatFix in GCJ-02 for domestic map tiles.</description>
  <maintainer email="wheeltec@todo.todo">wheeltec</maintainer>
  <license>BSD-3-Clause</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
